# dakia

./: .gitignore  Cargo.toml  LICENSE  README.md  log4rs.yaml
src/: main.rs
src/api/: mod.rs
src/ui/: calc.rs  mod.rs
src/ui/render/: body.rs  mod.rs
src/ui/state/: app_status.rs  body.rs  kv_data.rs  kv_tab_state.rs  mod.rs  query_param.rs  query_params_ui.rs  request_tabs.rs  response.rs  text_edit.rs  url.rs  url_params.rs
src/ui/widgets/: label.rs  mod.rs  select.rs  text_input.rs
src/user_input/: kv_tab.rs  mod.rs
src/utils/: url.rs
