[package]
name = "dakia"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.19"
crossterm = "0.25"
reqwest = { version = "0.11", features = ["blocking", "json"] }
#tokio = { version = "1", features = ["full"] }

