[package]
name = "dakia"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.19"
crossterm = "0.25"
reqwest = { version = "0.11", features = ["blocking", "json", "deflate", "gzip", "brotli"] }
jsonxf = "1.1"
log = "0.4"
log4rs= { version = "1.2", features = ["gzip"] }
copypasta = "0.8.2"
#tokio = { version = "1", features = ["full"] }

